src/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn2code-api
  namespace: practice301
  labels:
    app: learn2code-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learn2code-api
  template:
    metadata:
      labels:
        app: learn2code-api
    spec:
      containers:
        - name: learn2code-api
          image: learn2code-api:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /swagger/v1/swagger.json
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /swagger/v1/swagger.json
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
