src/k8s/service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: learn2code-api-clusterip
  namespace: learn2code
  labels:
    app: learn2code-api
spec:
  type: ClusterIP
  selector:
    app: learn2code-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
