src/k8s/service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: learn2code-api-lb
  namespace: learn2code
  labels:
    app: learn2code-api
spec:
  type: LoadBalancer
  selector:
    app: learn2code-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
