src/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: learn2code-api
  namespace: practice301
  labels:
    app: learn2code-api
spec:
  type: NodePort
  selector:
    app: learn2code-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      nodePort: 30080
