src/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learn2code-api
  namespace: learn2code
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: learn2code.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: learn2code-api
                port:
                  number: 80
